--- a/index.html
+++ b/index.html
@@ -5,18 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esme Louise Robinson Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js">    // Navigation link activation
-    const navLinks = document.querySelectorAll('.nav a');
-    window.addEventListener('scroll', () => {
-      document.querySelectorAll('section').forEach((section, index) => {
-        const rect = section.getBoundingClientRect();
-        if (rect.top >= 0 && rect.top < window.innerHeight / 2) {
-          navLinks.forEach(link => link.classList.remove('active'));
-          navLinks[index].classList.add('active');
-        }
-      });
-    });
-$1
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> <!-- FIXED: Closed script tag -->
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -64,7 +54,7 @@ $1
       max-width: 700px;
       line-height: 1.6;
     }
-      .nav {
+    .nav {
       position: fixed;
       top: 50%;
       left: 20px;
@@ -87,9 +77,10 @@ $1
     .nav a.active {
       opacity: 1;
     }
-$1
+  </style>
 </head>
-$1
+
+<body>
   <nav class="nav">
     <a href="#home">Home</a>
     <a href="#about">About</a>
@@ -117,7 +108,21 @@ $1
       <p>I love crafting visual stories, building immersive portfolio worlds, and exploring identity and culture through digital expression.</p>
     </section>
   </main>
+
+  <!-- Navigation Activation Script -->
   <script>
+    // Navigation link activation
+    const navLinks = document.querySelectorAll('.nav a');
+    window.addEventListener('scroll', () => {
+      document.querySelectorAll('section').forEach((section, index) => {
+        const rect = section.getBoundingClientRect();
+        if (rect.top >= 0 && rect.top < window.innerHeight / 2) {
+          navLinks.forEach(link => link.classList.remove('active'));
+          navLinks[index].classList.add('active');
+        }
+      });
+    });
+
     // Reveal sections on scroll
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
